<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nv_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_dortodoor"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="Door to Door"
        android:visible="false" />

    <item
        android:id="@+id/nv_order_history"
        android:enabled="true"
        android:icon="@drawable/ic_order_history"
        android:title="@string/order_history" />

    <item
        android:id="@+id/nv_cart"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/nv_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
