<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:menu="@menu/home_top_bar"
            app:navigationIcon="@drawable/ic_map_switch">

            <ImageView
                android:id="@+id/iv_logo_top"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/logo_text" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/search_input_bg"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:theme="@style/AppTheme.SearchView"
                android:visibility="gone"
                app:queryHint="@string/hint_search" />

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            style="@style/Widget.MaterialComponents.TabLayout.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/yellow"
            app:tabIndicatorFullWidth="true"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nearby" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_visit" />

           <!-- <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Door To Door" />-->

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>